# ehrust

./: .env.example  Cargo.toml  README.md  docker-compose.yml
ehrust-api/: Cargo.toml
ehrust-api/migrations/: 20221221201800_setup.sql  20221221201801_add_types.sql  20221221220556_add_system_table.sql  20221221222352_add_territory_table.sql  20221221222539_add_language_table.sql  20221221222640_add_terminology_provider_table.sql  20221221222705_add_concept_table.sql  20221221222812_add_party_identified_table.sql  20221221222849_add_identifier_table.sql  20221221223101_add_access_table.sql  20221221223102_add_audit_details_table.sql  20221221223136_add_contribution_table.sql  20221221223137_add_folder_table.sql  20221221223138_add_ehr_table.sql  20221221223139_add_attestation_ref_table.sql  20221221223140_add_contribution_table.sql  20221221223220_add_status_table.sql  20221221223259_add_history_table.sql  20221221223541_add_contribution_table.sql  20221221223918_add_attestation_table.sql  20221221223944_add_attested_view_table.sql  20221221224102_add_contribution_history_table.sql  20221221224141_add_composition_table.sql  20221221224301_add_composition_history_table.sql  20221222131027_add_compo_xref_table.sql  20221222131159_add_entry_table.sql  20221222131732_add_entry_history_table.sql  20221222131847_add_event_context_table.sql  20221222132031_add_event_context_history_table.sql  20221222132153_add_flyway_schema_history_table.sql  20221222132451_add_folder_hiearchy_table.sql  20221222132623_add_folder_hiearchy_history_table.sql  20221222132705_add_folder_history_table.sql  20221222132742_add_folder_items_table.sql  20221222132940_add_folder_items_history_table.sql  20221222133017_add_heading_table.sql  20221222133111_add_object_ref_table.sql  20221222133255_add_object_ref_history_table.sql  20221222133840_add_participation_table.sql  20221222133953_add_participation_history_table.sql  (+9 more)
(+29 files in other folders)
