[package]
name = "ehrust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["tower-log"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls" , "postgres", "uuid", "time"] }
tokio = { version = "1.23.0", features = ["full"] }

validator = "0.16.0"
uuid = { version = "1.2.2", features = ["serde"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.91"

dotenv = "0.15.0"
clap = { version = "4.0.29", features = ["derive", "env"] }
time = { version = "0.3.17", features = ["parsing", "formatting"] }