[package]
name = "ehrust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = [ "tower-log" ] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = [ "trace" ] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }

sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls" , "postgres", "uuid", "chrono", "json" ] }
tokio = { version = "1.23.0", features = [ "full" ] }

validator = "0.16.0"
uuid = { version = "1.2.2", features = [ "serde", "v4", "fast-rng" ] }
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = { version = "1.0.91", features = [ "raw_value" ] }
chrono = { version = "0.4.23", features = [ "serde" ]}

dotenvy = "0.15.6"
clap = { version = "4.0.32", features = [ "derive", "env" ] }